--- a/estilo.css
+++ b/estilo.css
@@ -1,2 +1,25 @@
 *{margin: 0; padding: 0;}
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/151w1FgRZfnKZA9FEcg9Z3?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+body{
+	background-color: #F2F1F1;
+}
+
+nav{
+	background-color: #D3D3D3;
+	justify-content: space-between;
+	display: flex;
+	height: 100%;
+}
+
+
+#logo-nav{
+	margin-left: 20px;
+	margin-top: 20px;
+	align-content: center;
+}
+.a-menu{
+	font-size: 35px;
+	display: flex;
+	justify-content: flex-end;
+	padding: 50px;
+}
