--- a/estiloEras.css
+++ b/estiloEras.css
@@ -73,46 +73,46 @@ h1, p{
 	margin-top: 15px;
 }
 #card-1{
-	background-color: #3fab8b;
+	background-color: #7FAC8C;
 }
 #card-2{
-	background-color: #e6d1a2;
+	background-color: #CCA270;
 }
 #card-3{
-	background-color: #ddceff;
+	background-color: #B89DBC;
 }
 #card-4{
 	background-color: #430a0a;
 }
 #card-5{
-	background-color: #d3f3fa;
+	background-color: #B3D3D6;
 }
 #texto-1989 p{
 	color: #000;
 }
 #card-6{
-	background-color: #313131;
+	background-color: #292827;
 }
 #card-7{
-	background-color: #eab4f3;
+	background-color: #FFBBF0;
 }
 #texto-lover p{
 	color: #000;
 }
 #card-8{
-	background-color: #a4a4a4;
+	background-color: #979491;
 }
 #card-9{
-	background-color: #bcaaa4;
+	background-color: #A69076;
 }
 #card-10{
-	background-color: #795548;
+	background-color: #5E4023;
 }
 #card-11{
-	background-color: #421214;
+	background-color: #3A0501;
 }
 #card-12{
-	background-color: #272a65;
+	background-color: #221864;
 }
 
 
