--- a/estilo.css
+++ b/estilo.css
@@ -109,10 +109,24 @@ iframe{
 	font-size: 40px;
 	text-align: center;
 	color: #2B324E;
+
 }
 #img-banner{
+	text-align: center;
 	mix-blend-mode:multiply;
-	height: 1000px;
+	height: 95%;
+}
+#botao-banner{
+	font-size: 1.5em;
+	margin: 5px;
+	padding: 5px;
+	text-align: center;
+	background-color: #4A5275 ;
+	color: #FFF;
+	border: none;
+	border-radius: 30px;
+	padding-left: 50px;
+	padding-right: 50px;
 }
 
 
@@ -146,6 +160,3 @@ footer a:hover{
 	color: #3F51B5;
 }
 
-
-
-/*pagina eras*/
