--- a/estiloEras.css
+++ b/estiloEras.css
@@ -32,6 +32,9 @@ h1, p{
 	text-align: center;
 	padding: 30px;
 }
+h1{
+	font-size: 50px;
+}
 
 .container{
 	display: flex;
@@ -114,6 +117,143 @@ h1, p{
 #card-12{
 	background-color: #221864;
 }
+
+a{
+	text-decoration: none;
+}
+a:link{text-decoration: none;}
+a:hover{text-decoration: none;}
+
+
+
+.titulo-eras{
+	width: 20%;
+}
+p{
+	text-align: justify;
+	font-size: 30px;
+}
+
+iframe{
+	padding: 30px;
+}
+
+#pag-TaylorSwift{
+	background-color: #7FAC8C;
+	padding: 20px;
+}
+
+#pag-fearless{
+	background-color: #CCA270;
+	padding: 20px;
+}
+
+#pag-SpeakNow{
+	background-color: #B89DBC;
+	padding-left: 20px;
+	padding-bottom: 20px;
+}
+
+#pag-red{
+	background-color: #430a0a;
+	padding: 20px;
+}
+
+#fix-red-img{
+	width: 10%;
+}
+#fix-red-text{
+	color: #CCC;
+}
+
+#pag-1989{
+	background-color: #B3D3D6;
+	padding-left: 20px;
+	padding-bottom: 20px;
+}
+#fix-1989-img{
+	width: 15%;
+}
+#pag-reputation{
+	background-color: #292827;
+	padding: 20px;
+}
+#fix-rep-text{
+	color: #CCC;
+}
+#pag-lover{
+	background-color: #FFBBF0;
+	padding: 20px;
+}
+#texto-lover p{
+	color: #000;
+}
+#pag-evermore{
+	background-color: #979491;
+	padding: 20px;
+}
+#pag-folklore{
+	background-color: #A69076;
+	padding: 20px;
+}
+#pag-fearless-tv{
+	background-color: #5E4023;
+	padding: 20px;
+}
+#pag-red-tv{
+	background-color: #3A0501;
+	padding: 20px;
+}
+#fix-red-tv-img{
+	width: 10%;
+}
+#fix-red-tv-text{
+	color: #CCC;
+}
+#pag-midnights{
+	background-color: #221864;
+	padding: 20px;
+}
+#fix-mid-text{
+	color: #CCC;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 footer{
 	background-color: #000;
 	padding: 20px;
