--- a/estiloEras.css
+++ b/estiloEras.css
@@ -221,7 +221,237 @@ iframe{
 }
 
 
+/* MOBILE */
 
+@media screen and (max-width: 390px) {
+	#nav-topo{
+		width: 390px;
+		height: 110px;
+		justify-content: space-between;
+		display: flex;
+	}
+
+	#logo-nav{
+		margin-left: 10px;
+		margin-top: 30px;
+		width: 240px;
+	}
+	.a-menu{
+		font-size: 20px;
+		display: inline-grid;
+		color: black;
+		text-align: center;
+		padding: 0px;
+		margin-top: 3px;
+		margin-right: 10px;
+		box-sizing: border-box;
+	}
+
+	.h1, p{
+		text-align: center;
+		padding: 30px;
+	}
+	h1{
+		font-size: 2rem;
+		text-align: center;
+		margin-bottom: 20px;
+	}
+	main{
+		
+	}
+
+	.nav-eras{
+		display: inline-grid;
+		justify-content: center;
+		align-items: flex-start;
+	}
+	.container{
+		display: flex;
+		justify-content: flex-start;
+		margin-top: 5px;
+		flex-wrap: wrap;
+	}
+
+	.card{
+		background-color: #e4dedd;
+		width: 90%;
+		height: 85px;
+		border-radius: 5px;
+		box-shadow: 2px 2px 20px 2px #000;
+		justify-content: flex-start;
+		display: inline-flex;
+		margin: 10px;
+	}
+	.img-card{
+		width: 30%;
+		border-radius: 0px 0px 0px 0px;
+	  	display: inline-grid;
+	  	margin-top: 10px;
+	  	margin-left: 10px;
+	}
+
+	.subtitulo{
+		width: 50%;
+		text-align: center;
+		margin-top: 2px;
+		margin-left: 3px;
+		display: inline-grid;
+	}
+
+	.text-card {
+		font-size: 0.7em;
+		color: #FFF;
+		padding: 2px;
+		margin-right: 55px;
+	}
+
+	.text-card p{
+		color: #FFF;
+		font-size: 1em;
+	}
+
+	#card-1{
+		background-color: #7FAC8C;
+	}
+	#card-2{
+		background-color: #CCA270;
+	}
+	#card-3{
+		background-color: #B89DBC;
+	}
+	#card-4{
+		background-color: #430a0a;
+	}
+	#card-5{
+		background-color: #B3D3D6;
+	}
+	#texto-1989 p{
+		color: #000;
+	}
+	#card-6{
+		background-color: #292827;
+	}
+	#card-7{
+		background-color: #FFBBF0;
+	}
+	#texto-lover p{
+		color: #000;
+	}
+	#card-8{
+		background-color: #979491;
+	}
+	#card-9{
+		background-color: #A69076;
+	}
+	#card-10{
+		background-color: #5E4023;
+	}
+	#card-11{
+		background-color: #3A0501;
+	}
+	#card-12{
+		background-color: #221864;
+	}
+
+	a{
+		text-decoration: none;
+	}
+	a:link{text-decoration: none;}
+	a:hover{text-decoration: none;}
+
+
+
+.titulo-eras{
+	width: 30%;
+}
+p{
+	text-align: justify;
+	font-size: 15px;
+}
+
+iframe{
+	padding: 10px;
+}
+
+#pag-TaylorSwift{
+	background-color: #7FAC8C;
+	padding: 20px;
+}
+
+#pag-fearless{
+	background-color: #CCA270;
+	padding: 20px;
+}
+
+#pag-SpeakNow{
+	background-color: #B89DBC;
+	padding-left: 20px;
+	padding-bottom: 20px;
+}
+
+#pag-red{
+	background-color: #430a0a;
+	padding: 20px;
+}
+
+#fix-red-img{
+	width: 10%;
+}
+#fix-red-text{
+	color: #CCC;
+}
+
+#pag-1989{
+	background-color: #B3D3D6;
+	padding-left: 20px;
+	padding-bottom: 20px;
+}
+#fix-1989-img{
+	width: 15%;
+}
+#pag-reputation{
+	background-color: #292827;
+	padding: 20px;
+}
+#fix-rep-text{
+	color: #CCC;
+}
+#pag-lover{
+	background-color: #FFBBF0;
+	padding: 20px;
+}
+#texto-lover p{
+	color: #000;
+}
+#pag-evermore{
+	background-color: #979491;
+	padding: 20px;
+}
+#pag-folklore{
+	background-color: #A69076;
+	padding: 20px;
+}
+#pag-fearless-tv{
+	background-color: #5E4023;
+	padding: 20px;
+}
+#pag-red-tv{
+	background-color: #3A0501;
+	padding: 20px;
+}
+#fix-red-tv-img{
+	width: 10%;
+}
+#fix-red-tv-text{
+	color: #CCC;
+}
+#pag-midnights{
+	background-color: #221864;
+	padding: 20px;
+}
+#fix-mid-text{
+	color: #CCC;
+}
 
 
 
