--- a/estiloBiografia.css
+++ b/estiloBiografia.css
@@ -49,7 +49,44 @@ nav{
 
 
 
+/* MOBILE */
 
+@media screen and (max-width: 390px) {
+	#nav-topo{
+		width: 390px;
+		height: 110px;
+		justify-content: space-between;
+		display: flex;
+	}
+
+	#logo-nav{
+		margin-left: 10px;
+		margin-top: 30px;
+		width: 240px;
+	}
+	.a-menu{
+		font-size: 20px;
+		display: inline-grid;
+		color: black;
+		text-align: center;
+		padding: 0px;
+		margin-top: 3px;
+		margin-right: 10px;
+		box-sizing: border-box;
+	}
+
+	.h1, p{
+		text-align: center;
+		padding: 30px;
+	}
+	h1{
+		font-size: 2rem;
+		text-align: center;
+		margin-bottom: 20px;
+	}
+	main{
+		
+	}
 
 
 
