--- a/estilo.css
+++ b/estilo.css
@@ -53,23 +53,40 @@ aside{
 	margin-bottom: 10px;
 }
 .card-not{
-	width: 100%;
+	max-width: 100%;
+	max-height: 100%;
 	display: flex;
 }
 
 #not-img{
 	align-items: center;
 	margin-left: 15px;
-	width: 220%;
-	justify-items: right;
+	justify-items:right;
 }
 #not-text{
+	margin-top: 10%;
 	color: #FFF;
 	width: 35%;
 	align-items: right;
-	margin-left: 160px;
+	margin-left: 25%;
 	text-align: center;
 	
+}
+#botao-noticia{
+	font-size: 1.5em;
+	margin: 5px;
+	padding: 5px;
+	text-align: center;
+	background-color:#2B324E;
+	color: #FFF;
+	border: none;
+	border-radius: 30px;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+#botao-noticia a{
+	color: #FFF;
+	text-decoration: none;
 }
 main{
 	background-color: #FFF;
@@ -121,17 +138,38 @@ iframe{
 	margin: 5px;
 	padding: 5px;
 	text-align: center;
-	background-color: #4A5275 ;
-	color: #FFF;
+	background-color:#2B324E;
 	border: none;
 	border-radius: 30px;
 	padding-left: 50px;
 	padding-right: 50px;
-
 }
 
+#botao-banner a{
+	color: #FFF;
+	text-decoration: none;
+}
 #botao-banner:hover{color: #212121 ;}
 #botao-banner:link,#botao-banner:visited{color: #FFF;}
+
+
+
+footer{
+	background-color: #000;
+	padding: 20px;
+	clear: both;
+}
+footer p{
+	text-align: center;
+	color: #FFF;
+	font-size: 1,5em;
+}
+footer a{
+	color: #FFF;
+}
+footer a:hover{
+	color: #3F51B5;
+}
 
 
 
@@ -177,26 +215,4 @@ iframe{
 
 
 
-
-
-
-
-
-
-footer{
-	background-color: #000;
-	padding: 20px;
-	clear: both;
-}
-footer p{
-	text-align: center;
-	color: #FFF;
-	font-size: 1,5em;
-}
-footer a{
-	color: #FFF;
-}
-footer a:hover{
-	color: #3F51B5;
-}
 
