--- a/estiloEras.css
+++ b/estiloEras.css
@@ -35,6 +35,9 @@ h1, p{
 h1{
 	font-size: 50px;
 }
+#texto-eras{
+	text-align: center;
+}
 main{
 	
 }
@@ -218,6 +221,23 @@ iframe{
 }
 #fix-mid-text{
 	color: #CCC;
+}
+
+footer{
+	background-color: #000;
+	padding: 20px;
+	clear: both;
+}
+footer p{
+	text-align: center;
+	color: #FFF;
+	font-size: 1,5em;
+}
+footer a{
+	color: #FFF;
+}
+footer a:hover{
+	color: #3F51B5;
 }
 
 
@@ -453,52 +473,3 @@ iframe{
 	color: #CCC;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-footer{
-	background-color: #000;
-	padding: 20px;
-	clear: both;
-}
-footer p{
-	text-align: center;
-	color: #FFF;
-	font-size: 1,5em;
-}
-footer a{
-	color: #FFF;
-}
-footer a:hover{
-	color: #3F51B5;
-}
