--- a/estiloEras.css
+++ b/estiloEras.css
@@ -123,6 +123,7 @@ main{
 	background-color: #221864;
 }
 
+
 a{
 	text-decoration: none;
 }
@@ -315,39 +316,46 @@ footer a:hover{
 
 @media screen and (max-width: 390px) {
 	#nav-topo{
-		width: 390px;
-		height: 110px;
+		width: 100%;
+		height: 75px;
 		justify-content: space-between;
-		display: flex;
+		display: inline-grid;
+		align-items: center;
 	}
 
 	#logo-nav{
-		margin-left: 10px;
-		margin-top: 30px;
-		width: 240px;
+		margin-left: 50px;
+		margin-top: 10px;
+		width: 250px;
 	}
 	.a-menu{
-		font-size: 20px;
-		display: inline-grid;
+		font-size: 0.5rem;
+		display: flex;
 		color: black;
 		text-align: center;
 		padding: 0px;
-		margin-top: 3px;
 		margin-right: 10px;
 		box-sizing: border-box;
 	}
 
-	.h1, p{
+	main h1, p{
 		text-align: center;
-		padding: 30px;
+		padding: 2px;
 	}
+
 	h1{
-		font-size: 2rem;
-		text-align: center;
-		margin-bottom: 20px;
+		font-size: 1rem;
+		text-align: justify;
+		margin: 25px, 2px;
 	}
-	main{
-		
+
+	.inicio-eras{
+		margin-left: 10px;
+	}
+
+	#clique-eras{
+		font-size: 1rem;
+		text-align: center;
 	}
 
 	.nav-eras{
@@ -356,7 +364,7 @@ footer a:hover{
 		align-items: flex-start;
 	}
 	.container{
-		display: flex;
+		display: inline-grid;
 		justify-content: flex-start;
 		margin-top: 5px;
 		flex-wrap: wrap;
@@ -364,40 +372,37 @@ footer a:hover{
 
 	.card{
 		background-color: #e4dedd;
-		width: 90%;
-		height: 85px;
+		width: 340px;
+		height: 50px;
 		border-radius: 5px;
-		box-shadow: 2px 2px 20px 2px #000;
+		box-shadow: 2px 2px 10px 2px #000;
 		justify-content: flex-start;
 		display: inline-flex;
-		margin: 10px;
+		margin: 7px;
 	}
 	.img-card{
-		width: 30%;
-		border-radius: 0px 0px 0px 0px;
-	  	display: inline-grid;
-	  	margin-top: 10px;
-	  	margin-left: 10px;
+		width: 40px;
+		border-radius: 5px;
+	  display: inline-grid;
+	  margin-top: 5px;
+	  margin-left: 20px;
 	}
 
 	.subtitulo{
-		width: 50%;
+		width: 50px;
 		text-align: center;
-		margin-top: 2px;
-		margin-left: 3px;
+		margin-top: 5px;
+		margin-left: 20px;
 		display: inline-grid;
 	}
 
 	.text-card {
 		font-size: 0.7em;
 		color: #FFF;
-		padding: 2px;
-		margin-right: 55px;
-	}
-
-	.text-card p{
-		color: #FFF;
-		font-size: 1em;
+		padding: 5px;
+		text-align: center;
+		margin-top: 20px;
+		margin-left: 50px;
 	}
 
 	#card-1{
@@ -449,19 +454,14 @@ footer a:hover{
 	a:link{text-decoration: none;}
 	a:hover{text-decoration: none;}
 
-
-
 .titulo-eras{
 	width: 30%;
 }
 p{
 	text-align: justify;
-	font-size: 15px;
+	font-size: 0.5rem;
 }
 
-iframe{
-	padding: 10px;
-}
 
 #pag-TaylorSwift{
 	background-color: #7FAC8C;
@@ -543,3 +543,19 @@ iframe{
 	color: #CCC;
 }
 
+footer{
+	background-color: #000;
+	padding: 20px;
+	clear: both;
+}
+footer p{
+	text-align: center;
+	color: #FFF;
+	font-size: 1,5em;
+}
+footer a{
+	color: #FFF;
+}
+footer a:hover{
+	color: #3F51B5;
+}
