adiçaõ de fonte

--- a/estilo.css
+++ b/estilo.css
@@ -102,6 +102,7 @@ main h1{
 main h2{
 	margin-left: 50px;
 	margin-bottom: 30px;
+	font-family: 'Josefin Sans',sans-serif;
 }
 main p{
 	margin-left: 50px;
