--- a/estiloBiografia.css
+++ b/estiloBiografia.css
@@ -69,40 +69,89 @@ footer a:hover{
 /* MOBILE */
 
 @media screen and (max-width: 390px) {
+
+	body{
+		background-image: url("img/img-biografia-edited2.png");
+		background-repeat: no-repeat;
+	}
 	#nav-topo{
-		width: 390px;
-		height: 110px;
+		width: 100%;
+		height: 75px;
 		justify-content: space-between;
-		display: flex;
+		display: inline-grid;
+		align-items: center;
 	}
 
 	#logo-nav{
-		margin-left: 10px;
-		margin-top: 30px;
-		width: 240px;
+		margin-left: 50px;
+		margin-top: 10px;
+		width: 250px;
 	}
 	.a-menu{
-		font-size: 20px;
-		display: inline-grid;
+		font-size: 0.5rem;
+		display: flex;
 		color: black;
 		text-align: center;
 		padding: 0px;
-		margin-top: 3px;
+		margin-top: 0px;
 		margin-right: 10px;
 		box-sizing: border-box;
 	}
 
-	.h1, p{
-		text-align: center;
-		padding: 30px;
+
+	#container-bio{
+		display: flex;
+		justify-content: space-between;
+		margin-bottom: 86px;
 	}
+
+	#texto-bio{
+		font-size: 6px;
+		margin-top: 20px;
+		margin-left: 10px;
+		margin-right: 0px;
+		box-sizing: content-box;
+		width: 140%;
+		padding: 0px;
+	}
+
+	#img-biografia{
+		width: 0%;
+	}
+
 	h1{
-		font-size: 2rem;
+		font-size: 10px;
+		text-align: justify;
+		color: #FFF;
+		margin: 25px, 2px;
+	}
+
+	p{
+		font-size: 0.5em;
+		color: #FFF;
+		text-align: justify;
+	}
+
+	a{
+	text-decoration: none;
+	}
+	a:link{text-decoration: none;}
+	a:hover{text-decoration: none;}
+
+
+	footer{
+		background-color: #000;
+		padding: 20px;
+		clear: both;
+	}
+	footer p{
 		text-align: center;
-		margin-bottom: 20px;
+		color: #FFF;
+		font-size: 1,5em;
 	}
-	main{
-		
+	footer a{
+		color: #FFF;
 	}
-
-
+	footer a:hover{
+		color: #3F51B5;
+	}
