--- a/estiloContato.css
+++ b/estiloContato.css
@@ -115,42 +115,135 @@ footer a:hover{
 /* MOBILE */
 
 @media screen and (max-width: 390px) {
+
+
+	body{
+	background-image: url("img/img-email3cropped.png");
+	background-size: 100%;
+	}
+
+
 	#nav-topo{
-		width: 390px;
-		height: 110px;
+		width: 100%;
+		height: 75px;
 		justify-content: space-between;
-		display: flex;
+		display: inline-grid;
+		align-items: center;
 	}
 
 	#logo-nav{
-		margin-left: 10px;
-		margin-top: 30px;
-		width: 240px;
+		margin-left: 50px;
+		margin-top: 10px;
+		width: 250px;
 	}
 	.a-menu{
-		font-size: 20px;
-		display: inline-grid;
+		font-size: 0.5rem;
+		display: flex;
 		color: black;
 		text-align: center;
 		padding: 0px;
-		margin-top: 3px;
 		margin-right: 10px;
 		box-sizing: border-box;
 	}
 
-	.h1, p{
-		text-align: center;
-		padding: 30px;
+	a{
+	text-decoration: none;
 	}
-	h1{
-		font-size: 2rem;
+	a:link{text-decoration: none;}
+	a:hover{text-decoration: none;}
+
+	main h1, p{
 		text-align: center;
-		margin-bottom: 20px;
-	}
-	main{
-		
+		padding: 2px;
 	}
 
+	h1{
+		font-size: 1rem;
+		text-align: justify;
+		margin: 25px, 2px;
+	}
+
+	P{
+		font-family: 'Gideon Roman',cursive;
+		font-size: 1rem;
+		padding-bottom: 10px;
+	}
+.textos{
+	padding: 100px;
+}
+
+#texto1{
+	font-family: 'Gideon Roman',cursive;
+	color: #FFF;
+	text-align: center;
+}
+
+#texto2{
+	font-family: 'Gideon Roman',cursive;
+	color: #FFF;
+	text-align: center;
+}
+
+form{
+	background-color: #000;
+	width: 100%;
+ 	padding: 20px;
+ 	border-radius: 10px;
+ 	box-shadow: 0 0 10px purple;
+}
+
+input,textarea{
+	width: 100%;/*width com padding sao somados e ai precisar do box sizing*/
+	font: 0.8em 'Gideon Roman',cursive;
+	color: #757575;
+	padding: 8px;
+	box-sizing: border-box;
+	margin-bottom: 10px;
+	border:1px solid purple;
+	border-radius: 5px;
+}
+
+label{
+	font: 0.8em 'Gideon Roman',cursive;
+	color: #FFF;
+}
+
+.container{
+	display: flex;
+	justify-content: space-between;
+	margin-top: 10px;
+}
+
+input[type="submit"],input[type="reset"]{
+	border:none;
+	background-color: #8BC34A;
+	color: #FFF;
+	width: 45%;
+	border-radius: 10px;
+}
+
+input[type="reset"]{
+	background-color: #F47E7E;
+}
+
+
+footer{
+	background-color: #000;
+	padding: 20px;
+	clear: both;
+	margin-top: 165px;
+}
+footer p{
+	text-align: center;
+	color: #FFF;
+	font-size: 1,5em;
+}
+footer a{
+	color: #FFF;
+}
+footer a:hover{
+	color: #3F51B5;
+}
 
 
 
