--- a/estilo.css
+++ b/estilo.css
@@ -18,7 +18,6 @@ body{
 	height: 100%;
 }
 
-
 #logo-nav{
 	margin-left: 20px;
 	margin-top: 20px;
@@ -28,6 +27,7 @@ body{
 	justify-content: flex-end;
 	padding: 50px;
 	color: black;
+	text-decoration: none;
 }
 aside{
 	display: grid;
@@ -153,9 +153,6 @@ iframe{
 #botao-banner:hover{color: #212121 ;}
 #botao-banner:link,#botao-banner:visited{color: #FFF;}
 
-
-
-
 footer{
 	background-color: #000;
 	padding: 20px;
@@ -168,12 +165,11 @@ footer p{
 }
 footer a{
 	color: #FFF;
+	text-decoration: none;
 }
 footer a:hover{
 	color: #3F51B5;
 }
-
-
 
 /* MOBILE */
 
@@ -206,8 +202,6 @@ footer a:hover{
 	}
 	a:link{text-decoration: none;}
 	a:hover{text-decoration: none;}
-
-	}
 
 	main, aside, #nav-banner{
 		width: 100%;
@@ -246,7 +240,6 @@ footer a:hover{
 	display: flex;
 	float: left;
 	}
-
 
 	#not-text{
 		font-size: 0rem;
@@ -360,8 +353,11 @@ footer a:hover{
 
 	footer a{
 		color: #FFF;
+		text-decoration: none;
 	}
 
 	footer a:hover{
 		color: #3F51B5;
 	}
+
+	
