--- a/estiloBiografia.css
+++ b/estiloBiografia.css
@@ -25,6 +25,7 @@ body{
 	justify-content: flex-end;
 	padding: 50px;
 	color: black;
+	text-decoration: none;
 }
 main{
 	width: 60%;
@@ -60,6 +61,7 @@ footer p{
 }
 footer a{
 	color: #FFF;
+	text-decoration: none;
 }
 footer a:hover{
 	color: #3F51B5;
@@ -151,6 +153,7 @@ footer a:hover{
 	}
 	footer a{
 		color: #FFF;
+		text-decoration: none;
 	}
 	footer a:hover{
 		color: #3F51B5;
