--- a/estiloContato.css
+++ b/estiloContato.css
@@ -29,6 +29,7 @@ body{
 	justify-content: flex-end;
 	padding: 50px;
 	color: black;
+	text-decoration: none;
 }
 P{
 	font-family: 'Gideon Roman',cursive;
@@ -107,6 +108,7 @@ footer p{
 }
 footer a{
 	color: #FFF;
+	text-decoration: none;
 }
 footer a:hover{
 	color: #3F51B5;
@@ -240,6 +242,7 @@ footer p{
 }
 footer a{
 	color: #FFF;
+	text-decoration: none;
 }
 footer a:hover{
 	color: #3F51B5;
