--- a/estiloBiografia.css
+++ b/estiloBiografia.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Gideon+Roman&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gideon+Roman&family=Josefin+Sans:wght@200&family=Montserrat:wght@200&family=Raleway:wght@200&display=swap');
 
 *{margin: 0; padding: 0;}
 
@@ -32,13 +33,26 @@ main{
 	float: left;
 }
 main h1{
-	font-size: 3em;
+	font-size: 4em;
 	margin: 10px;
 	margin-bottom: 20px;
+	text-align: center;
+}
+main h2{
+	font-size: 2em;
+	margin: 10px;
+	margin-bottom: 2px;
+	margin-left: 19px;
+	margin-top: 20px;
+	color: #da8e01;
+	font-family: Raleway, sans-serif;
 }
 main p{
-	font-size: 1.7em;
+	font-size: 1.3em;
 	margin: 10px;
+	font-family: 'Gideon Roman',sans-serif;
+	margin-left: 19px;
+
 }
 nav{
 	width: 40%;
