--- a/estiloEras.css
+++ b/estiloEras.css
@@ -60,8 +60,11 @@ main{
 	background-color: #e4dedd;
 	width: 30%;
 	border-radius: 5px;
-	box-shadow: 10px 10px 10px #000;
+	box-shadow: 10px 10px 10px #868a8a;
 	margin: 40px
+}
+.card:hover{
+	box-shadow: 10px 10px 10px 10px #5b5e5f;
 }
 .img-card{
 	width: 80%;
