--- a/estilo.css
+++ b/estilo.css
@@ -18,7 +18,6 @@ body{
 	display: flex;
 	height: 100%;
 }
-
 #logo-nav{
 	margin-left: 20px;
 	margin-top: 20px;
@@ -28,7 +27,6 @@ body{
 	justify-content: flex-end;
 	padding: 50px;
 	color: black;
-	text-decoration: none;
 }
 aside{
 	display: grid;
@@ -44,6 +42,8 @@ aside{
     float: left;
     border-radius: 0px;
     flex-wrap: wrap;
+    text-align: justify;
+    width: 570px;
 }
 #not-titulo{
 	font-size: 2em;
@@ -65,12 +65,12 @@ aside{
 	justify-items:right;
 }
 #not-text{
-	margin-top: 10%;
+	margin-top: 7%;
 	color: #FFF;
 	width: 35%;
 	align-items: right;
 	margin-left: 40px;
-	text-align: center;
+	text-align: center ;
 	font-family: Montserrat, sans-serif;
 }
 
@@ -80,7 +80,7 @@ aside{
 	width: 35%;
 	align-items: center;
 	margin-left: 40px;
-	text-align: justify;
+	text-align: center;
 	font-family: Montserrat, sans-serif;
 }
 #botao-noticia{
