--- a/estilo.css
+++ b/estilo.css
@@ -27,7 +27,7 @@ body{
 	justify-content: flex-end;
 	padding: 50px;
 	color: black;
-}
+	text-decoration: none;}
 aside{
 	display: grid;
 	background-color: hotpink;
