--- a/estiloEras.css
+++ b/estiloEras.css
@@ -18,7 +18,6 @@ body{
 	display: flex;
 	height: 100%;
 }
-
 #logo-nav{
 	margin-left: 20px;
 	margin-top: 20px;
@@ -28,7 +27,6 @@ body{
 	justify-content: flex-end;
 	padding: 50px;
 	color: black;
-	text-decoration: none;
 }
 
 h1, p{
@@ -147,6 +145,7 @@ a:hover{text-decoration: none;}
 p{
 	text-align: justify;
 	font-size: 30px;
+	font-family: sans-serif;
 }
 
 iframe{
